--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
 			
 			<div class="container" id="directions">
 				<h1 class="text-center mt-5">오시는 길</h1>
-					
-				<p class="h5">
+					<div id="map" style="width:750px;height:350px;"></div>
+				<p class="h5 pt-5 pb-5">
 					주소:서울특별시 성동구 성수이로18길 7, HS빌딩 7층
 				</p>
 			</div>
@@ -597,12 +597,15 @@
 		
 		<!-- bootstrap -->
 		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
 			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 			crossorigin="anonymous"
 		></script>
 		<!-- splide -->
 		<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+		
+		<script src="https//dapi.kakao.com/v2/maps/sdk.js?appkey=136aace113391f29de1ef4b8536fdc22"></script>
+		
 		<script src="JavaScript/script.js"></script>
 	</body>
 </html>
