--- a/4.html
+++ b/4.html
@@ -13,8 +13,8 @@
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="assets/css/main.css" />
-		
+		<link rel="stylesheet" href="assets/css/main2.css" />
+
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -109,8 +109,8 @@
 						src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/158717449_1645312439003849_4773636624406557489_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=Qcq4waKQMIkAX-NE8mo&_nc_ht=scontent-ssn1-1.xx&oh=43469574ac2c77c157e15cb48829499c&oe=6071D25A"
 						alt=""
 				/></span>
-				<h1 class="display-4 mt-3"><strong>기타간판</strong></h1>				
-				
+				<h1 class="display-3 mt-3"><strong>기타간판</strong></h1>
+
 			</header>
 
 			<!-- Main -->
@@ -118,38 +118,43 @@
 				<!-- Thumbnails -->
 				<section class="thumbnails">
 					<div>
-						<a href="images/fulls/01.jpg">
-							<img src="images/thumbs/01.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
+						<a href="example\간판+이미지\기타간판\20210312_234031.png">
+							<img src="example\간판+이미지\기타간판\20210312_234031.png" alt="한끼줍쇼"  class="modify"/>
+							<h3></h3>
 						</a>
-						<a href="images/fulls/02.jpg">
-							<img src="images/thumbs/02.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
-						</a>
-					</div>
-					<div>
-						<a href="images/fulls/03.jpg">
-							<img src="images/thumbs/03.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
-						</a>
-						<a href="images/fulls/04.jpg">
-							<img src="images/thumbs/04.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
-						</a>
-						<a href="images/fulls/05.jpg">
-							<img src="images/thumbs/05.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
+						<a href="example\간판+이미지\기타간판\IMG_0357.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0357.JPG" alt="한끼줍쇼"  class="modify"/>
+							<h3></h3>
 						</a>
 					</div>
 					<div>
-						<a href="images/fulls/06.jpg">
-							<img src="images/thumbs/06.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
+						<a href="example\간판+이미지\기타간판\IMG_0358.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0358.JPG" alt="" />
+							<h3></h3>
 						</a>
-						<a href="images/fulls/07.jpg">
-							<img src="images/thumbs/07.jpg" alt="" />
-							<h3>Lorem ipsum dolor sit amet</h3>
+						<a href="example\간판+이미지\기타간판\IMG_0361.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0361.JPG" alt="" />
+							<h3></h3>
 						</a>
+						<a href="example\간판+이미지\기타간판\IMG_0367.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0367.JPG" alt="" />
+							<h3></h3>
+						</a>
+
+					</div>
+					<div>
+						<a href="example\간판+이미지\기타간판\IMG_0376.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0376.JPG" alt="" />
+							<h3></h3>
+						</a>
+						<a href="example\간판+이미지\기타간판\IMG_0387.JPG">
+							<img src="example\간판+이미지\기타간판\IMG_0387.JPG" alt="" />
+							<h3></h3>
+						</a>
+
+
+
+
 					</div>
 				</section>
 			</section>
