--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ display: inline-block; float:right; ">
 
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <a href="1.html"><img class="card-img-top" src="C:\Users\USER\Desktop\web1\example\간판+이미지\사인탑\IMG_0365.JPG" alt="Card image cap"></a>
+                <a href="1.html"><img class="card-img-top" src="example\간판+이미지\사인탑\IMG_0365.JPG" alt="Card image cap"></a>
                 <div class="card-body">
                   <p class="card-text text-center m-0 h3">사인탑</p>
                   <div class="d-flex justify-content-between align-items-center">
