--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
 		<meta name="description" content="명판, 간판 디자인, 현판, 돌출간판, 간판업체, 카페입간판, 미니 간판, 간판 만들기, 네온간판, 간판 제작, 간판 종류, 실내 간판" />
 		<link rel="canonical" href="https://www.soowangsign.ga">
+		
 		<meta property="og:type" content="website">
-<meta property="og:title" content="수왕간판">
-<meta property="og:description" content="간판 제작">
-<meta property="og:image" content="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.15752-9/159985879_157958906076949_7901578992633451399_n.png?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=MF4203Q8xzEAX_Xjmu0&_nc_ht=scontent-ssn1-1.xx&oh=cb6c9b005df331e6d74d92df601f4931&oe=60751657">
-<meta property="og:url" content="https://www.soowangsign.ga">
+		<meta property="og:title" content="수왕간판">
+		<meta property="og:description" content="간판 제작">
+		<meta property="og:image" content="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.15752-9/159985879_157958906076949_7901578992633451399_n.png?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=MF4203Q8xzEAX_Xjmu0&_nc_ht=scontent-ssn1-1.xx&oh=cb6c9b005df331e6d74d92df601f4931&oe=60751657">
+		<meta property="og:url" content="https://www.soowangsign.ga">
 
 		<title>수왕간판</title>
 
@@ -20,41 +21,13 @@
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous"
 		/>
+		
 		<!-- Google Fonts 		 -->
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
-
-
-
+		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
 
 		<!-- Favicons -->
-		<link
-			rel="apple-touch-icon"
-			href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
-			sizes="180x180"
-		/>
-		<link
-			rel="icon"
-			href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
-			sizes="32x32"
-			type="image/png"
-		/>
-		<link
-			rel="icon"
-			href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
-			sizes="16x16"
-			type="image/png"
-		/>
-		<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json" />
-		<link
-			rel="mask-icon"
-			href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
-			color="#7952b3"
-		/>
-		<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico" />
-		<meta name="theme-color" content="#7952b3" />
-
-		<link rel=" shortcut icon" href="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.15752-9/159985879_157958906076949_7901578992633451399_n.png?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=MF4203Q8xzEAX_Xjmu0&_nc_ht=scontent-ssn1-1.xx&oh=cb6c9b005df331e6d74d92df601f4931&oe=60751657">
-		<link rel="icon" href="파일이름.ico">
+		<link rel=" shortcut icon" href="web1/web1/example/간판+이미지/수왕간판로고.png">
+		<link rel="icon" href="web1/web1/example/간판+이미지/수왕간판로고.png">
 
 		<!-- Custom styles for this template -->
 		<link href="CSS/carousel.css" rel="stylesheet" />
@@ -67,9 +40,12 @@
 			<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 				<div class="container-fluid">
 					<div class="navbar_logo">
-						<img src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.15752-9/159985879_157958906076949_7901578992633451399_n.png?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=MF4203Q8xzEAX_Xjmu0&_nc_ht=scontent-ssn1-1.xx&oh=cb6c9b005df331e6d74d92df601f4931&oe=60751657" style="width:3.5rem; height:3rem; ">
+						<img src="./example/간판+이미지/수왕간판로고.png">
 					</div>
-					<span>	<a href="#" class="text-decoration-none text-warning h2">수왕 간판</a></span>
+					<div>
+						<span class="h2 text-warning">수왕</span><span class="h2 text-light ">간판</span>
+					</div>
+					
 					<button
 						class="navbar-toggler"
 						type="button"
@@ -255,7 +231,7 @@
 <p>더 실용적이고 품질 좋은 자재와 그에 맞는 전문기술로 퀼리티있는 디자인을 연출하고 합리적이고 편안한 공간을 만들기 위해 더욱 노력하는 수왕광고가 되겠습니다. </p>
 <p class="font-weight-normal text-danger h4 pt-4">항상 믿을 수 있는 파트너가 되어드릴 것을 약속드립니다.</p>
 
-        <p class="lead font-weight-normal  text-warning">당신의 가게가 더 돋보일수 있도록 할게요</p>
+        
 
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
