--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
-		<meta name="description" content="명판, 간판 디자인, 현판, 돌출간판, 간판업체, 카페입간판, 미니 간판, 간판 만들기, 네온간판, 간판 제작, 간판 종류, 실내 간판" />
-		<link rel="canonical" href="https://www.soowangsign.ga">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0,  shrink-to-fit=no" />
+		<meta name="description" content ="간판, 시트, 썬팅, 표찰, 현수막, 싸인탑, 채널간판, led간판, 지주간판, 베너, 글자간판, 유리간판, 실사" />
+		<link rel="canonical" href="https://www.dongkyeong.ga">
 
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="수왕간판">
-		<meta property="og:description" content="간판 제작">
+		<meta property="og:title" content="동경기획">
+		<meta property="og:description" content="간판 제작,기획<br>20년 이상 노하우로..(중략)">
 		<meta property="og:image" content="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.15752-9/159985879_157958906076949_7901578992633451399_n.png?_nc_cat=107&ccb=1-3&_nc_sid=ae9488&_nc_ohc=MF4203Q8xzEAX_Xjmu0&_nc_ht=scontent-ssn1-1.xx&oh=cb6c9b005df331e6d74d92df601f4931&oe=60751657">
-		<meta property="og:url" content="https://www.soowangsign.ga">
+		<meta property="og:url" content="https://www.dongkyeong.ga">
 
 		<title>수왕간판</title>
 
@@ -22,14 +22,10 @@
 			crossorigin="anonymous"
 		/>
 
-		<!-- Google Fonts 		 -->
-		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
-
 		<!-- Favicons -->
 		<link rel="shortcut icon" href="간판+이미지/간판로고2.png">
 		<link rel="icon" href="간판+이미지/간판로고2.png">
 
-		<!-- Custom styles for this template -->
 		<link href="CSS/carousel.css" rel="stylesheet" />
 		<link href="CSS/style.css" rel="stylesheet" />
 	</head>
@@ -277,10 +273,33 @@ display: inline-block; float:right; ">
         </div>
 
         <hr class="featurette-divider">
+      </div>
 
-        <!-- /END THE FEATURETTES -->
+    <!-- 제품소개 -->
+		<div class="container align-center d-flex justify-content-center">
+				<div class="btn-group row " role="group" aria-label="Basic radio toggle button group">
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+			<label class="btn btn-outline-dark btn-lg" for="btnradio1">사인탑</label>
 
-      </div><!-- /.container -->
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio2">채널간판</label>
+
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio3">돌출간판</label>
+
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio4">기타간판</label>
+
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio5">실사출력(썬팅)</label>
+
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio6">현수막</label>
+
+			<input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
+			<label class="btn btn-outline-dark btn-lg" for="btnradio7">베너</label>
+			</div>
+		</div>
 
 
 			<div class="container" id="product_description">
@@ -416,48 +435,34 @@ display: inline-block; float:right; ">
 			</div>
 
 
-
-
-			<!-- FOOTER -->
-			<!-- <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer> -->
 			<!-- Footer -->
-			<footer class="bg-white text-center text-lg-start" id="footer">
-				<!-- Grid container -->
+			<footer class="text-center text-lg-start" id="footer">
 				<div class="container p-4">
-					<!--Grid row-->
 					<div class="row">
-						<!--Grid column-->
-						<div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+						<div class="col-lg-4 col-md-12 mb-4 ">
 							<h2 class="text-uppercase">회사 정보</h2>
 							<p>
-								회사명|수왕간판<br />
+								회사명|동경기획<br />
 								대표자명|송민우<br />
 								사업자 등록번호|607-12-91983<br />
 								tel|010-5499-6190<br />
-								e-mail|isangmin516@gmail.com<br />
-								Fax|051-543-8688<br />
+								e-mail|mw6190@hanmail.net<br />
 								주소|부산 해운대구 반송로892번길 28<br />
 							</p>
 						</div>
-						<!--Grid column-->
 
 						<!--Grid column-->
-						<div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+						<div class="col-lg-4 col-md-6 mb-4 ">
 							<h2 class="text-uppercase">고객센터</h2>
 							<div id="customer-center">010-5499-6190</div>
 							평일 | 10AM ~ 18PM<br />
 							주말 | 10AM ~ 18PM<br />
 							공휴일 휴무
 						</div>
-						<!--Grid column-->
 
 						<!--Grid column-->
-						<div class="col-lg-4 col-md-6 mb-4 mb-md-0" id="sitemap_div">
+						<div class="col-lg-4 col-md-6 mb-4" id="sitemap_div">
 							<h5 class="text-uppercase" id="sitemap_title">사이트맵</h5>
-
 							<ul class="">
 								<li>
 									<a href="#greetings" class="text-dark">대표인사말</a>
@@ -473,21 +478,18 @@ display: inline-block; float:right; ">
 								</li>
 							</ul>
 						</div>
-						<!--Grid column-->
+
 					</div>
-					<!--Grid row-->
 				</div>
-				<!-- Grid container -->
 
 				<!-- Copyright -->
 				<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
 					© 2020 Copyright:
 					<a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
 				</div>
-				<!-- Copyright -->
 			</footer>
-			<!-- Footer -->
-		</main>
+	</main>
+
 		<script src="https://kit.fontawesome.com/aed927fdf6.js" crossorigin="anonymous"></script>
 		<!-- bootstrap -->
 		<script
@@ -497,7 +499,6 @@ display: inline-block; float:right; ">
 		></script>
 
 		<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=136aace113391f29de1ef4b8536fdc22"></script>
-
 		<script src="JavaScript/script.js"></script>
 	</body>
 </html>
