--- a/hi.html
+++ b/hi.html
@@ -7,82 +7,195 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
 	  <style>
-		  #primary-slider-track{
-			   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
+		  body{
+			  margin:0px;
+			  padding:0px;
+			  background-color:#eef8ff;
+		  }
+		  a{
+			  text-decoration:none;
+		  }
+		  .box{
+			  width:300px;
+			  box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
+			  border-radius:10px;
+			  overflow:hidden;
+			  position:absolute;
+			  left:50%;
+			  top:50%;
+			  transform: translate(-50%, -50%);
+		  }
+		  .slide-img{
+			  height:450px;
+		  }
+		  .slide-img img{
+			  width: 100%;
+			  height:100%;
+			  object-fit: cover;
+		  }
+		  .detail-box{
+			  width:100%;
+			  display:flex;
+			  justify-content: space-between;
+			  align-items:center;
+			  padding: 10px 20px;
+			  box-sizing: border-box;
+			  font-family: calibri;
+		  }
+		  .type{
+			  display:flex;
+			  flex-direction: column;
+		  }
+		  .type a {
+			  color:#222222;
+			  margin: 5px 0px;
+			  font-weight: 700;
+			  letter-spacing: 0.5px;
+			  padding-right: 8px;
+		  }
+		  .type span{
+			  color:rgba(26,26,26,0.5);
+		  }
+		  .price{
+			  color:#333333;
+			  font-weight: 600;
+			  font-size:1.1rem;
+			  font-family: poppins
+		  }
+		  .overlay{
+			  position: absolute;
+			  left:50%;
+			  top
 		  }
 	  </style>
 
     <title>Hello, world!</title>
   </head>
   <body>
-	  
-	  	<div id="primary-slider" class="splide">
-	<div class="splide__track">
-		<ul class="splide__list">
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-		</ul>
-	</div>
-</div>	  
-		  <div id="secondary-slider" class="splide">
-	<div class="splide__track">
-		<ul class="splide__list">
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-			<li class="splide__slide">
-				<img src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80">
-			</li>
-		</ul>
-	</div>
-</div>
-  
-  
+	<div class="box">
+		<div class="slide-img">
+			<img src="./간판+이미지/사인탑/1.png">
+			<div class="overlay">
+		<a hreft="#" class="buy-btn">Buy Now</a>
+		</div>
+		</div>
+		<div class="detail-box">
+		
+		<div class="type">
+		<a href="#" class="price">Rabbed Cardigan</a>
+			<span>Noe Arrival</span>
+		</div>
+			
+			
+		</div>
+	  </div>  
 
-	  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	  <script>
-	// Create and mount the thumbnails slider.
-var secondarySlider = new Splide( '#secondary-slider', {
-	rewind      : true,
-	fixedWidth  : 100,
-	fixedHeight : 64,
-	isNavigation: true,
-	gap         : 10,
-	focus       : 'center',
-	pagination  : false,
-	cover       : true,
-	breakpoints : {
-		'600': {
-			fixedWidth  : 66,
-			fixedHeight : 40,
-		}
-	}
-} ).mount();
+	$('#send').click(function() {
+  var mes = $('#message').val().replace('(<3)', '<img src="pics/lol/love.png">');
+  $('#discussion').append('<li>' + mes + '</li>');
+});
+	  </script>
+  </body>
+</html><!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/themes/splide-skyblue.min.css">
+	  <style>
+		  body{
+			  margin:0px;
+			  padding:0px;
+			  background-color:#eef8ff;
+		  }
+		  a{
+			  text-decoration:none;
+		  }
+		  .box{
+			  width:300px;
+			  box-shadow: 2px 2px 30px rgba(0,0,0,0.2);
+			  border-radius:10px;
+			  overflow:hidden;
+			  position:absolute;
+			  left:50%;
+			  top:50%;
+			  transform: translate(-50%, -50%);
+		  }
+		  .slide-img{
+			  height:450px;
+		  }
+		  .slide-img img{
+			  width: 100%;
+			  height:100%;
+			  object-fit: cover;
+		  }
+		  .detail-box{
+			  width:100%;
+			  display:flex;
+			  justify-content: space-between;
+			  align-items:center;
+			  padding: 10px 20px;
+			  box-sizing: border-box;
+			  font-family: calibri;
+		  }
+		  .type{
+			  display:flex;
+			  flex-direction: column;
+		  }
+		  .type a {
+			  color:#222222;
+			  margin: 5px 0px;
+			  font-weight: 700;
+			  letter-spacing: 0.5px;
+			  padding-right: 8px;
+		  }
+		  .type span{
+			  color:rgba(26,26,26,0.5);
+		  }
+		  .price{
+			  color:#333333;
+			  font-weight: 600;
+			  font-size:1.1rem;
+			  font-family: poppins
+		  }
+		  .overlay{
+			  position: absolute;
+			  left:50%;
+			  top
+		  }
+	  </style>
 
-// Create the main slider.
-var primarySlider = new Splide( '#primary-slider', {
-	type       : 'fade',
-	heightRatio: 0.5,
-	pagination : false,
-	arrows     : false,
-	cover      : true,
-} );
+    <title>Hello, world!</title>
+  </head>
+  <body>
+	<div class="box">
+		<div class="slide-img">
+			<img src="./간판+이미지/사인탑/1.png">
+			<div class="overlay">
+		<a hreft="#" class="buy-btn">Buy Now</a>
+		</div>
+		</div>
+		<div class="detail-box">
+		
+		<div class="type">
+		<a href="#" class="price">Rabbed Cardigan</a>
+			<span>Noe Arrival</span>
+		</div>
+			
+			
+		</div>
+	  </div>  
 
-// Set the thumbnails slider as a sync target and then call mount.
-primarySlider.sync( secondarySlider ).mount();
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	  <script>
+	$('#send').click(function() {
+  var mes = $('#message').val().replace('(<3)', '<img src="pics/lol/love.png">');
+  $('#discussion').append('<li>' + mes + '</li>');
+});
 	  </script>
   </body>
 </html>
