--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<link rel="icon" href="./간판+이미지/동경-블랙로고.png" type="image/x-icon">
 		<link href="CSS/carousel.css" rel="stylesheet" />
 		<link href="CSS/style.css" rel="stylesheet" />
+		<meta name="naver-site-verification" content="b3875d2378cee3bc21e8ef09a09a1f774a0c017c" />
 	</head>
 
 	<body>
